@@ -13,7 +13,6 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>Reg2Run.Program</StartupObject>
-    <ApplicationManifest>App.manifest</ApplicationManifest>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>
     </AssemblyOriginatorKeyFile>
@@ -67,7 +66,7 @@
     <Compile Include="RegistryWriteFlag.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.manifest" />
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
