@@ -1,6 +1,6 @@
 Reg2Run Tool TODO List
 
-[ ] Elevate privileges on demand
+[x] Elevate privileges on demand
 [x] Examine first parameter being a path to executable even '-p' is not specified
 [x] Indicate StringComparison in logging messages on import
 [ ] Store log messages into a resource file
