@@ -2,7 +2,10 @@ Reg2Run Tool Changelog
 
 2.1.10 (?)
 
-[~] Improving exception handling while P/Invokes executions
+[+] Elevating privileges on demand
+
+[~] Improving exception handling while P/Invokes execution
+[~] No more registry action enumeration as a flag; the last given is significant
 
 2.1.9 (2010.08.16)
 
@@ -52,7 +55,7 @@ Reg2Run Tool Changelog
 2.0.2 (2008.12.22)
 
 [+] Exceptions serialization
-[+] Parameter '-r' can be set either as flag or value. Flag indicates to start specified application on successful import; value will be passed as argument to started application
+[+] Parameter '-r' can be set either as a single flag or key-value pair. Flag indicates to start specified application on successful import; whenever pair key will be passed as argument the application being started
 [+] Parameter '/?' means the same as '-?'
 
 [~] Adding and running notifications contains full path
